--- a/genindex.html
+++ b/genindex.html
@@ -350,8 +350,287 @@ title="Open an issue"
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#G"><strong>G</strong></a>
+ | <a href="#H"><strong>H</strong></a>
+ | <a href="#K"><strong>K</strong></a>
+ | <a href="#L"><strong>L</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey.add_adslab_info">add_adslab_info() (catlas.sankey.sankey_utils.Sankey method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey.add_slab_info">add_slab_info() (catlas.sankey.sankey_utils.Sankey method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor">BatchOCPPredictor (class in catlas.adslab_predictions)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.better_build_func_identifier">better_build_func_identifier() (in module catlas.cache_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    catlas.adslab_predictions
+
+      <ul>
+        <li><a href="modules/adslab_predictions.html#module-catlas.adslab_predictions">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.cache_utils
+
+      <ul>
+        <li><a href="modules/cache_utils.html#module-catlas.cache_utils">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.config_validation
+
+      <ul>
+        <li><a href="modules/config_validation.html#module-catlas.config_validation">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.dask_kube_utils
+
+      <ul>
+        <li><a href="modules/dask_kube_utils.html#module-catlas.dask_kube_utils">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.dask_utils
+
+      <ul>
+        <li><a href="modules/dask_utils.html#module-catlas.dask_utils">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    catlas.enumerate_slabs_adslabs
+
+      <ul>
+        <li><a href="modules/enumerate_slabs_adslabs.html#module-catlas.enumerate_slabs_adslabs">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.nuclearity
+
+      <ul>
+        <li><a href="modules/nuclearity.html#module-catlas.nuclearity">module</a>
+</li>
+      </ul></li>
+      <li>
+    catlas.parity.data_processing_utils
+
+      <ul>
+        <li><a href="modules/data_processing_utils.html#module-catlas.parity.data_processing_utils">module</a>
+</li>
+      </ul></li>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.check_cache">check_cache() (in module catlas.cache_utils)</a>
+</li>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.convert_adslabs_to_graphs">convert_adslabs_to_graphs() (in module catlas.enumerate_slabs_adslabs)</a>
+</li>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.CustomAdsorbate">CustomAdsorbate (class in catlas.enumerate_slabs_adslabs)</a>
+</li>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.CustomBulk">CustomBulk (class in catlas.enumerate_slabs_adslabs)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.direct_prediction">direct_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.energy_prediction">energy_prediction() (in module catlas.adslab_predictions)</a>
+</li>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.enumerate_adslabs">enumerate_adslabs() (in module catlas.enumerate_slabs_adslabs)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.enumerate_slabs">enumerate_slabs() (in module catlas.enumerate_slabs_adslabs)</a>
+</li>
+      <li><a href="modules/nuclearity.html#catlas.nuclearity.evaluate_infiniteness">evaluate_infiniteness() (in module catlas.nuclearity)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="G">G</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.get_cached_func_location">get_cached_func_location() (in module catlas.cache_utils)</a>
+</li>
+      <li><a href="modules/nuclearity.html#catlas.nuclearity.get_connectivity_matrix">get_connectivity_matrix() (in module catlas.nuclearity)</a>
+</li>
+      <li><a href="modules/dask_kube_utils.html#catlas.dask_kube_utils.get_namespace">get_namespace() (in module catlas.dask_kube_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/nuclearity.html#catlas.nuclearity.get_nuclearity">get_nuclearity() (in module catlas.nuclearity)</a>
+</li>
+      <li><a href="modules/nuclearity.html#catlas.nuclearity.get_nuclearity_neighbor_counts">get_nuclearity_neighbor_counts() (in module catlas.nuclearity)</a>
+</li>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey.get_sankey_diagram">get_sankey_diagram() (catlas.sankey.sankey_utils.Sankey method)</a>
+</li>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.GraphsListDataset">GraphsListDataset (class in catlas.adslab_predictions)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="H">H</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.hash_func">hash_func() (in module catlas.cache_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/dask_kube_utils.html#catlas.dask_kube_utils.kube_cluster_new_worker">kube_cluster_new_worker() (in module catlas.dask_kube_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="L">L</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.load_checkpoint">load_checkpoint() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.make_dataloader">make_dataloader() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+</li>
+      <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.merge_surface_adsorbate_combo">merge_surface_adsorbate_combo() (in module catlas.enumerate_slabs_adslabs)</a>
+</li>
+      <li>
+    module
+
+      <ul>
+        <li><a href="modules/adslab_predictions.html#module-catlas.adslab_predictions">catlas.adslab_predictions</a>
+</li>
+        <li><a href="modules/cache_utils.html#module-catlas.cache_utils">catlas.cache_utils</a>
+</li>
+        <li><a href="modules/config_validation.html#module-catlas.config_validation">catlas.config_validation</a>
+</li>
+        <li><a href="modules/dask_kube_utils.html#module-catlas.dask_kube_utils">catlas.dask_kube_utils</a>
+</li>
+        <li><a href="modules/dask_utils.html#module-catlas.dask_utils">catlas.dask_utils</a>
+</li>
+        <li><a href="modules/enumerate_slabs_adslabs.html#module-catlas.enumerate_slabs_adslabs">catlas.enumerate_slabs_adslabs</a>
+</li>
+        <li><a href="modules/nuclearity.html#module-catlas.nuclearity">catlas.nuclearity</a>
+</li>
+        <li><a href="modules/data_processing_utils.html#module-catlas.parity.data_processing_utils">catlas.parity.data_processing_utils</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.naive_func_identifier">naive_func_identifier() (in module catlas.cache_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.relaxation_prediction">relaxation_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey">Sankey (class in catlas.sankey.sankey_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.SqliteSingleThreadDict">SqliteSingleThreadDict (class in catlas.cache_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/dask_utils.html#catlas.dask_utils.to_pickles">to_pickles() (in module catlas.dask_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.token">token() (in module catlas.cache_utils)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey.update_dictionary">update_dictionary() (catlas.sankey.sankey_utils.Sankey method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey.update_y_positions">update_y_positions() (catlas.sankey.sankey_utils.Sankey method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/config_validation.html#catlas.config_validation.validate_element">validate_element() (in module catlas.config_validation)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/config_validation.html#catlas.config_validation.validate_folder_exists">validate_folder_exists() (in module catlas.config_validation)</a>
+</li>
+      <li><a href="modules/config_validation.html#catlas.config_validation.validate_path_exists">validate_path_exists() (in module catlas.config_validation)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
               </div>
