deploy: f80c86c672fa7d5be837d5d653f9c3ca757c3a94

--- a/genindex.html
+++ b/genindex.html
@@ -355,6 +355,7 @@ title="Open an issue"
  | <a href="#C"><strong>C</strong></a>
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
  | <a href="#G"><strong>G</strong></a>
  | <a href="#H"><strong>H</strong></a>
  | <a href="#K"><strong>K</strong></a>
@@ -387,6 +388,8 @@ title="Open an issue"
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/dask_utils.html#catlas.dask_utils.bag_split_individual_partitions">bag_split_individual_partitions() (in module catlas.dask_utils)</a>
+</li>
       <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor">BatchOCPPredictor (class in catlas.adslab_predictions)</a>
 </li>
   </ul></td>
@@ -482,6 +485,8 @@ title="Open an issue"
       </ul></li>
       <li><a href="modules/cache_utils.html#catlas.cache_utils.check_cache">check_cache() (in module catlas.cache_utils)</a>
 </li>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.SqliteSingleThreadDict.close">close() (catlas.cache_utils.SqliteSingleThreadDict method)</a>
+</li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.convert_adslabs_to_graphs">convert_adslabs_to_graphs() (in module catlas.enumerate_slabs_adslabs)</a>
 </li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.CustomAdsorbate">CustomAdsorbate (class in catlas.enumerate_slabs_adslabs)</a>
@@ -515,6 +520,14 @@ title="Open an issue"
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.enumerate_surfaces_and_filter">enumerate_surfaces_and_filter() (in module catlas.prediction_steps)</a>
 </li>
       <li><a href="modules/nuclearity.html#catlas.nuclearity.evaluate_infiniteness">evaluate_infiniteness() (in module catlas.nuclearity)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/prediction_steps.html#catlas.prediction_steps.finish_sankey_diagram">finish_sankey_diagram() (in module catlas.prediction_steps)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -675,9 +688,13 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/sankey_utils.html#catlas.sankey.sankey_utils.Sankey">Sankey (class in catlas.sankey.sankey_utils)</a>
 </li>
+      <li><a href="modules/filters.html#catlas.filters.slab_filter">slab_filter() (in module catlas.filters)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/filters.html#catlas.filters.slab_filter">slab_filter() (in module catlas.filters)</a>
+      <li><a href="modules/dask_utils.html#catlas.dask_utils.split_balance_df_partitions">split_balance_df_partitions() (in module catlas.dask_utils)</a>
+</li>
+      <li><a href="modules/cache_utils.html#catlas.cache_utils.sqlitedict_memoize">sqlitedict_memoize() (in module catlas.cache_utils)</a>
 </li>
       <li><a href="modules/cache_utils.html#catlas.cache_utils.SqliteSingleThreadDict">SqliteSingleThreadDict (class in catlas.cache_utils)</a>
 </li>
