--- a/modules/adslab_predictions.html
+++ b/modules/adslab_predictions.html
@@ -415,10 +415,8 @@ avoid duplicate model loading.</p>
 energy without running ML relaxations.</p>
 <dl class="field-list simple">
 <dt class="field-odd">Parameters</dt>
-<dd class="field-odd"><ul class="simple">
-<li><p><strong>graphs_list</strong> (<em>Iterable</em><em>[</em><em>torch_geometric.data.Data</em><em>]</em>) – structures to run</p></li>
-<li><p><strong>on.</strong> (<em>inference</em>) – </p></li>
-</ul>
+<dd class="field-odd"><p><strong>graphs_list</strong> (<em>Iterable</em><em>[</em><em>torch_geometric.data.Data</em><em>]</em>) – structures to run
+inference on.</p>
 </dd>
 <dt class="field-even">Returns</dt>
 <dd class="field-even"><p>predicted energies of the input structures.</p>
@@ -500,16 +498,10 @@ Iterable[torch_geometric.data.Data): relaxed structures</p>
 <li><p><strong>hash_adslab_dict</strong> (<em>str</em>) – A hash specific to <cite>adslab_dict</cite> used for cache comparisons</p></li>
 <li><p><strong>graphs_dict</strong> (<em>dict</em>) – A view of the adslabs to predict that will be used to predict energies. Should be ignored during cache comparisons.</p></li>
 <li><p><strong>checkpoint_path</strong> (<em>str</em>) – The path where the OCP model checkpoint can be found.</p></li>
-<li><p><strong>column_name</strong> (<em>str</em>) – An arbitrary name used to define the model output field</p></li>
-<li><p><strong>names.</strong> – </p></li>
-<li><p><strong>batch_size</strong> (<em>int</em><em>, </em><em>optional</em>) – The number of adslabs loaded onto a gpu at a single</p></li>
-<li><p><strong>Defaults</strong> (<em>time during relaxations. Should be ignored during cache comparisons.</em>) – </p></li>
-<li><p><strong>8.</strong> (<em>to</em>) – </p></li>
-<li><p><strong>gpu_mem_per_sample</strong> (<em>float</em><em>, </em><em>optional</em>) – The approximate memory used by a single</p></li>
-<li><p><strong>relaxations</strong> (<em>adslab during</em>) – </p></li>
-<li><p><strong>None.</strong> (<em>used to determine batch size. Defaults to</em>) – </p></li>
-<li><p><strong>number_steps</strong> (<em>int</em><em>, </em><em>optional</em>) – The number of steps used during relaxations.</p></li>
-<li><p><strong>200.</strong> (<em>Should be determined using bin/optimize_frame.py. Defaults to</em>) – </p></li>
+<li><p><strong>column_name</strong> (<em>str</em>) – An arbitrary name used to define the model output field names.</p></li>
+<li><p><strong>batch_size</strong> (<em>int</em><em>, </em><em>optional</em>) – The number of adslabs loaded onto a gpu at a single time during relaxations. Should be ignored during cache comparisons. Defaults to 8.</p></li>
+<li><p><strong>gpu_mem_per_sample</strong> (<em>float</em><em>, </em><em>optional</em>) – The approximate memory used by a single adslab during relaxations, used to determine batch size. Defaults to None.</p></li>
+<li><p><strong>number_steps</strong> (<em>int</em><em>, </em><em>optional</em>) – The number of steps used during relaxations. Should be determined using <cite>bin/optimize_frame.py</cite>. Defaults to 200.</p></li>
 </ul>
 </dd>
 <dt class="field-even">Returns</dt>
