--- a/modules/dask_kube_utils.html
+++ b/modules/dask_kube_utils.html
@@ -424,8 +424,7 @@ title="Print to PDF"
 <dt class="field-odd">Parameters</dt>
 <dd class="field-odd"><ul class="simple">
 <li><p><strong>cluster</strong> (<em>dask.distributed.client.Client</em>) – a dask cluster to run code on.</p></li>
-<li><p><strong>config_path</strong> (<em>str</em>) – a file path containing a config yml file defining the</p></li>
-<li><p><strong>worker</strong> (<em>specifications of the new</em>) – </p></li>
+<li><p><strong>config_path</strong> (<em>str</em>) – a file path containing a config yml file defining the specifications of the new worker</p></li>
 </ul>
 </dd>
 </dl>
