deploy: f75b3bbd30ac9803d342e070f31d2dfaadc40b2d

--- a/genindex.html
+++ b/genindex.html
@@ -516,7 +516,7 @@ title="Open an issue"
 </li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.enumerate_adslabs">enumerate_adslabs() (in module catlas.enumerate_slabs_adslabs)</a>
 </li>
-      <li><a href="modules/prediction_steps.html#catlas.prediction_steps.enumerate_and_predict_adslabs">enumerate_and_predict_adslabs() (in module catlas.prediction_steps)</a>
+      <li><a href="modules/prediction_steps.html#catlas.prediction_steps.enumerate_adslabs_wrapper">enumerate_adslabs_wrapper() (in module catlas.prediction_steps)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -617,6 +617,8 @@ title="Open an issue"
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.make_dataloader">make_dataloader() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+</li>
+      <li><a href="modules/prediction_steps.html#catlas.prediction_steps.make_predictions">make_predictions() (in module catlas.prediction_steps)</a>
 </li>
       <li><a href="modules/parity_utils.html#catlas.parity.parity_utils.make_subplot">make_subplot() (in module catlas.parity.parity_utils)</a>
 </li>
