deploy: fbe3939d0954abbfd41054eaad9a14faf2347de4

--- a/modules/dask_kube_utils.html
+++ b/modules/dask_kube_utils.html
@@ -424,7 +424,8 @@ title="Print to PDF"
 <dt class="field-odd">Parameters</dt>
 <dd class="field-odd"><ul class="simple">
 <li><p><strong>cluster</strong> (<em>dask.distributed.client.Client</em>) – a dask cluster to run code on.</p></li>
-<li><p><strong>config_path</strong> (<em>str</em>) – a file path containing a config yml file defining the specifications of the new worker</p></li>
+<li><p><strong>config_path</strong> (<em>str</em>) – a file path containing a config yml file defining the
+specifications of the new worker</p></li>
 </ul>
 </dd>
 </dl>
