--- a/genindex.html
+++ b/genindex.html
@@ -395,7 +395,7 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/dask_utils.html#catlas.dask_utils.bag_split_individual_partitions">bag_split_individual_partitions() (in module catlas.dask_utils)</a>
 </li>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor">BatchOCPPredictor (class in catlas.adslab_predictions)</a>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor">BatchOCPPredictor (class in catlas.adslab_predictions)</a>, <a href="modules/adslab_predictions.html#id1">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -504,7 +504,7 @@ title="Open an issue"
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.direct_prediction">direct_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.direct_prediction">direct_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>, <a href="modules/adslab_predictions.html#id2">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -532,6 +532,12 @@ title="Open an issue"
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_best_facet_by_surface_property">filter_best_facet_by_surface_property() (in module catlas.filter_utils)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_by_surface_property">filter_by_surface_property() (in module catlas.filter_utils)</a>
+</li>
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.finish_sankey_diagram">finish_sankey_diagram() (in module catlas.prediction_steps)</a>
 </li>
   </ul></td>
@@ -542,7 +548,15 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.generate_outputs">generate_outputs() (in module catlas.prediction_steps)</a>
 </li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_bond_length">get_bond_length() (in module catlas.filter_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_broken_bonds">get_broken_bonds() (in module catlas.filter_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_bulk_cn">get_bulk_cn() (in module catlas.filter_utils)</a>
+</li>
       <li><a href="modules/cache_utils.html#catlas.cache_utils.get_cached_func_location">get_cached_func_location() (in module catlas.cache_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_center_of_mass">get_center_of_mass() (in module catlas.filter_utils)</a>
 </li>
       <li><a href="modules/nuclearity.html#catlas.nuclearity.get_connectivity_matrix">get_connectivity_matrix() (in module catlas.nuclearity)</a>
 </li>
@@ -578,7 +592,13 @@ title="Open an issue"
 </li>
       <li><a href="modules/parity_utils.html#catlas.parity.parity_utils.get_specific_smile_plot">get_specific_smile_plot() (in module catlas.parity.parity_utils)</a>
 </li>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.GraphsListDataset">GraphsListDataset (class in catlas.adslab_predictions)</a>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_surface_density">get_surface_density() (in module catlas.filter_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_total_bb">get_total_bb() (in module catlas.filter_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.get_total_nn">get_total_nn() (in module catlas.filter_utils)</a>
+</li>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.GraphsListDataset">GraphsListDataset (class in catlas.adslab_predictions)</a>, <a href="modules/adslab_predictions.html#id0">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -608,7 +628,7 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.load_bulks_and_filter">load_bulks_and_filter() (in module catlas.prediction_steps)</a>
 </li>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.load_checkpoint">load_checkpoint() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.load_checkpoint">load_checkpoint() (catlas.adslab_predictions.BatchOCPPredictor method)</a>, <a href="modules/adslab_predictions.html#id3">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -616,7 +636,9 @@ title="Open an issue"
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.make_dataloader">make_dataloader() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.make_dataloader">make_dataloader() (catlas.adslab_predictions.BatchOCPPredictor method)</a>, <a href="modules/adslab_predictions.html#id4">[1]</a>
+</li>
+      <li><a href="modules/parity_utils.html#catlas.parity.parity_utils.make_parity_plots">make_parity_plots() (in module catlas.parity.parity_utils)</a>
 </li>
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.make_predictions">make_predictions() (in module catlas.prediction_steps)</a>
 </li>
@@ -685,7 +707,7 @@ title="Open an issue"
 <h2 id="R">R</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.relaxation_prediction">relaxation_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.BatchOCPPredictor.relaxation_prediction">relaxation_prediction() (catlas.adslab_predictions.BatchOCPPredictor method)</a>, <a href="modules/adslab_predictions.html#id5">[1]</a>
 </li>
   </ul></td>
 </tr></table>
@@ -697,13 +719,15 @@ title="Open an issue"
 </li>
       <li><a href="modules/filters.html#catlas.filters.slab_filter">slab_filter() (in module catlas.filters)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/dask_utils.html#catlas.dask_utils.split_balance_df_partitions">split_balance_df_partitions() (in module catlas.dask_utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/cache_utils.html#catlas.cache_utils.sqlitedict_memoize">sqlitedict_memoize() (in module catlas.cache_utils)</a>
 </li>
       <li><a href="modules/cache_utils.html#catlas.cache_utils.SqliteSingleThreadDict">SqliteSingleThreadDict (class in catlas.cache_utils)</a>
+</li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.surface_area">surface_area() (in module catlas.filter_utils)</a>
 </li>
   </ul></td>
 </tr></table>
