--- a/genindex.html
+++ b/genindex.html
@@ -494,6 +494,8 @@ title="Open an issue"
 </li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.convert_adslabs_to_graphs">convert_adslabs_to_graphs() (in module catlas.enumerate_slabs_adslabs)</a>
 </li>
+      <li><a href="modules/adslab_predictions.html#catlas.adslab_predictions.count_steps">count_steps() (in module catlas.adslab_predictions)</a>
+</li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.CustomAdsorbate">CustomAdsorbate (class in catlas.enumerate_slabs_adslabs)</a>
 </li>
       <li><a href="modules/enumerate_slabs_adslabs.html#catlas.enumerate_slabs_adslabs.CustomBulk">CustomBulk (class in catlas.enumerate_slabs_adslabs)</a>
@@ -534,9 +536,11 @@ title="Open an issue"
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_best_facet_by_surface_property">filter_best_facet_by_surface_property() (in module catlas.filter_utils)</a>
 </li>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_by_surface_property">filter_by_surface_property() (in module catlas.filter_utils)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_by_surface_property">filter_by_surface_property() (in module catlas.filter_utils)</a>
+      <li><a href="modules/filter_utils.html#catlas.filter_utils.filter_columns_by_type">filter_columns_by_type() (in module catlas.filter_utils)</a>
 </li>
       <li><a href="modules/prediction_steps.html#catlas.prediction_steps.finish_sankey_diagram">finish_sankey_diagram() (in module catlas.prediction_steps)</a>
 </li>
